----------------------
(see whatsnewVPM.txt for the Visual PinMAME exclusive changes!)


Version 3.3 (X X, 2020) - "20 years already?"
------------------------------------------------------------------------------

Compiling for iOS is now possible.
Also a new platform independent lib/dll is now available with a new, simple interface to request (some of) the internal data.

*** CORE/CPU ***
Added Regama driver
Wico's Af-Tor fully working now
Sped up Video Dens games, found more dip switches, switch test, saving NVRAM
E.F.O. sound board mostly working - speech output would still stall the board for now however
Sound support for early LTD system III
More sound found for LTD system 4 (extra lamp data is handled by sound chip port write!)
More solenoids found for LTD's Force & Haunted Hotel
More lamps found for LTD's Space Poker
Increased IRQ for LTD system III, helps with ball detection in outhole
Corrected CPU clock for Peyper / Sonic games, helps speeding up Gamatron game start
Doubled ZC frequency for Joctronic games, saving NVRAM
Support 4-solenoid stepper motor mech used by High Roller Casino, Starship Troopers, and Playboy
Fixed 8085A DSUB instruction for the H register
Fixed a bug in the TMS9995 emulation concerning port data writes
Make color/brightness mappings of Data East 128x16 DMDs match the real hardware
Fix an old regression of Alvin G. solenoids not firing consistently (most notably breaking Mystery Castle)
Improve DMD timings for the Sega 192x64 DMD, matching the real one more closely (also a slight improvement for the DE/Sega/Stern 128x32 ones)
Improve IRQ timings of Sys3/4/6/7/11, DE and the Sega 192x64 DMD-machines
Change switch writing of DE and Sega 192x64 DMD-machines
Improve sound filtering of Flash Gordon, Xenon and all Williams/Bally DCS machines, matching the real one more closely
Improve timings for GTS80 machines, especially for Rack 'em up until Tag-Team (1983-85 era)
Stabilized solenoids 16, 31, and 32 on GamePlan machines
